2010-10-21  Eric Botcazou  <ebotcazou@adacore.com>

	* cfgcleanup.c (try_forward_edges): Do not throw away previous steps
	when stopping because of a different locus on edge or insn.
	(try_optimize_cfg): Add comment.
	* cfgrtl.c (rtl_merge_blocks): Tweak log message.  If the destination
	block is a forwarder block, propagate locus on the edge.
	(cfg_layout_merge_blocks): Likewise.

2010-10-21  Uros Bizjak  <ubizjak@gmail.com>

	PR target/45946
	* config/i386/i386.md (*pushti2): New insn pattern.
	(pushti2 splitter): New insn splitter.
	(*push<mode>2): Macroize insn pattern from *push{di,ti}2 using
	DWI mode iterator.

2010-10-21  Paul Koning  <ni1d@arrl.net>

	* config/pdp11/pdp11-protos.md (arith_operand,
	const_immediate_operand, expand_shift_operand,
	immediate15_operand): Delete
	* config/pdp11/pdp11.c: Ditto.
	* config/pdp11/pdp11.h (REG_CLASS_FROM_LETTER,
	CONST_OK_FOR_LETTER_P, CONST_DOUBLE_OK_FOR_LETTER_P,
	EXTRA_CONSTRAINT): Delete.
	* config/pdp11/pdp11.md (various): Use standard constraints
	instead of removed ones.
	* config/pdp11/constraints.md: New file.
	* config/pdp11/predicates.md: New file.

2010-10-21  Bingfeng Mei  <bmei@broadcom.com>

	PR c/45834
	* alias.c (true_dependence_1): Remove obsolete check for QImode.
	(may_alias_p): Ditto.

2010-10-21  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/45875
	* tree.c (get_binfo_at_offset): Remove initial zero offset test.

2010-10-21  Nathan Froyd  <froydnj@codesourcery.com>

	* tree-into-ssa.c (rewrite_update_enter_block): Remove unused
	variables.
	(create_new_def_for): Likewise.

2010-10-21  Nick Clifton  <nickc@redhat.com>

	* config/mn10300/mn10300.c: Fold code to 80-character width.
	Replace GET_CODE (foo) == REG with REG_P (foo).  Likewise for
	MEM, CONST_INT and CONST_DOUBLE.
	(targetm): Move initialization to end of file.
	(print_operand): Rename to mn10300_print_operand.
	(print_operand_address): Rename to mn10300_print_operand_address.